Add experimental System.loadLibrary emulation to Library.loadNative. #277 in progress